fixed overflow of the barrel aged section.

--- a/src/public/assets/styles/_barrel-aging.scss
+++ b/src/public/assets/styles/_barrel-aging.scss
@@ -19,6 +19,10 @@ $two-thirds: 2/3;
   }
 }
 
+.barrel-aging__header {
+  position: relative;
+}
+
 .barrel-aging__content {
   width: 100%;
 }
